tests/react_abstract_component/get_set_elem.js
//@flow

declare var x: component(ref: React.RefSetter<any>, ...any);
declare var y: string;
x[y]; // error
x[y] = y; // error: no indexed type
